--- a/03-sample-containers/e06-express+redis-stack/express-container/shoutbox_express_app/app/src/views/pager.ejs
+++ b/03-sample-containers/e06-express+redis-stack/express-container/shoutbox_express_app/app/src/views/pager.ejs
@@ -5,20 +5,20 @@
       <% if (page.count > 1) { %>
         <% if (page.number) { %>
           <li class="page-item">
-            <a class="page-link" href="/<%= page.number %>">&laquo; Previous</a>
+            <a class="page-link" href="/<%= page.number - 1 %>">&laquo; Previous</a>
           </li>          
         <% } else { %>
           <li class="page-item disabled">
-            <a class="page-link" href="/<%= page.number %>">&laquo; Previous</a>
+            <a class="page-link" href="/<%= page.number - 1 %>">&laquo; Previous</a>
           </li>        
         <% } %>
         <% if (page.number < page.count -1) { %>
           <li class="page-item">
-            <a class="page-link" href="/<%= page.number + 2 %>">Next &raquo;</a>
+            <a class="page-link" href="/<%= page.number + 1 %>">Next &raquo;</a>
           </li>        
         <% } else { %>
           <li class="page-item disabled">
-            <a class="page-link" href="/<%= page.number + 2 %>">Next &raquo;</a>
+            <a class="page-link" href="/<%= page.number + 1 %>">Next &raquo;</a>
           </li>        
         <% } %> 
       <% } %>
